--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "liveSassCompile.settings.autoprefix": null,
     "cSpell.words": [
         "Orlean",
+        "minlength",
         "mixins",
         "preconnect",
         "Технокряк"
